add handlers for creating review requests from client
